findAllBySearch impl